--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
 language: python
 
 python:
-  - 3.6
+  - "2.7"
+  - "3.6"
 
-## command to install dependencies
-#install: "pip install -r requirements.txt"
+env:
+  - DJANGO=1.10.5
+  - DJANGO=1.9.12
+
+install:
+  - pip install -q Django==$DJANGO --use-mirrors
+  - pip install pep8 --use-mirrors
+  - pip install https://github.com/dcramer/pyflakes/tarball/master
+  - pip install -q -e . --use-mirrors
+
+before_script:
+  - "pep8 --exclude=migrations --ignore=E501,E225 src"
+  - pyflakes -x W src
+
+script:
+  - python setup.py test
