--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 appdirs==1.4.0
 Django==1.10.5
+django-debug-toolbar==1.6
 django-tinymce==2.6.0
 mysqlclient==1.3.10
 packaging==16.8
 pyparsing==2.1.10
 six==1.10.0
+sqlparse==0.2.3
